<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <item
        android:id="@+id/action_account"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_account"/>
    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_about"/>
       
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
